fix: screen readability in Confirmation Page

--- a/fpincome/src/app/income-review/pages/confirmation/confirmation.component.scss
+++ b/fpincome/src/app/income-review/pages/confirmation/confirmation.component.scss
@@ -1,3 +1,8 @@
 .confirmation-message {
   font-size: 1.5rem;
 }
+
+.print--icon {
+  margin-top: auto;
+  text-align: right;
+}
